--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Covid Stats</title>
-    <link rel="stylesheet" href="./covidstats.css" />
+    <link rel="stylesheet" href="./index.css" />
     <!-- CSS only -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
@@ -41,6 +41,6 @@
         </div>
       </div>
     </div>
-    <script src="./covidstats.js"></script>
+    <script src="./index.js"></script>
   </body>
 </html>
